--- a/helllo/index.html
+++ b/helllo/index.html
@@ -138,8 +138,8 @@ home
                 India is the world’s largest milk producer and consumer of dairy products, consuming almost 100% of its own milk production. The Indian dairy sector is different from other dairy producing countries as emphasis is placed on both cattle and buffalo milk. In order to achieve greater profitability, quality standards need to be improved. Following are some of the practical dairy farming challenges in India.<br>
                 <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <a href="/about" type="button" class="btn btn-sm btn-outline-secondary">View</a>
-                  <a href="/about" type="button" class="btn btn-sm btn-outline-secondary">Edit</a>
+                  <a href="/helllo/about.html" type="button" class="btn btn-sm btn-outline-secondary">View</a>
+                  <a href="/helllo/about.html" type="button" class="btn btn-sm btn-outline-secondary">Edit</a>
                    
                 </div>
                 
